--- a/appendix/erasures.tex
+++ b/appendix/erasures.tex
@@ -2,7 +2,7 @@
 
 %\subsection{Erasures}
 \label{sect:erasures}
-In the security proof of our PPA-base ring signature we need to embed a random preimage $A=\{\vecb{a}_1,\ldots,\allowbreak \vecb{a}_{q_{\mathsf{gen}}}\}$ of $h$ in the verification keys, where $q_{\mathsf{gen}}$ is the total number of verification keys. On the other hand, the adversary may adaptively corrupt parties obtaining all the random coins used to generate the verification key. That is, we need to reveal $\log_{\cP_S} \vecb{a}_i$ (the discrete logs of $\vecb{a}_i$) to the adversary, which is incompatible with the permutation pairing assumption and thus with the security of $h$. Since is not clear how to obliviously sample $(a_i\cP,a^2_i\cP)$ and we can only guess the set of corrupted parties with negligible probability, we are forced to use erasures: after sampling $a_i$ and computing $\vecb{a}_i$, the key generation algorithm erases $a_i$ and $a_i^2$.
+In the security proof of our PPA-based ring signature we need to embed a random preimage $A=\{\vecb{a}_1,\ldots,\allowbreak \vecb{a}_{q_{\mathsf{gen}}}\}$ of $h$ in the verification keys, where $q_{\mathsf{gen}}$ is the total number of verification keys. On the other hand, the adversary may adaptively corrupt parties obtaining all the random coins used to generate the verification key. That is, we need to reveal $\log_{\cP_S} \vecb{a}_i$ (the discrete logs of $\vecb{a}_i$) to the adversary, which is incompatible with the permutation pairing assumption and thus with the security of $h$. Since is not clear how to obliviously sample $(a_i\cP,a^2_i\cP)$ and we can only guess the set of corrupted parties with negligible probability, we are forced to use erasures: after sampling $a_i$ and computing $\vecb{a}_i$, the key generation algorithm erases $a_i$ and $a_i^2$.
 
 Erasures were considered by Bender et al.~\cite{TCC:BenKatMor06} but only with respect to anony\-mity. Our signature achieves the stronger notion of perfect anonymity of Chandran et al.~\cite{ICALP:ChaGroSah07}, meaning that, information theoretically, there is nothing in the signature that binds a signer to a signature. Since the random coins of our key generation algorithm are completely determined by the public key, in the information theoretic setting it is irrelevant if parties erase or not part of their random coins.
 
