--- a/main-ring-signature.tex
+++ b/main-ring-signature.tex
@@ -186,7 +186,7 @@ Shorter Ring Signatures from Standard Assumptions: Supplementary Material
     
         	 \input{prelim/flawed}
         	 
-        	 \section{The Erasures Assumption in Ring Signatures}
+        	 \section{The Erasures Assumption in Ring Signatures} \label{sec:erasures}
         	 
         	 	\input{appendix/erasures}
 
