--- a/intro/tech-overview.tex
+++ b/intro/tech-overview.tex
@@ -9,17 +9,16 @@ We ask the following natural question.
 \begin{displayquote}
 Can we construct more efficient set membership proofs (without random oracles or non-falsifiable assumptions) when verification keys are sampled from a known distribution?
 \end{displayquote}
-We answer this question in the affirmative and we construct a $\Theta(\sqrt[3]{n})$ set membership proof when the verification keys are honestly sampled. In contrast, Chandran et al.'s proof is of size $\Theta(\sqrt{n})$ but it makes no assumption on the verification keys distribution.
+We answer this question in the affirmative constructing a $\Theta(\sqrt[3]{n})$ set membership proof when the verification keys are honestly sampled. In contrast, Chandran et al.'s proof is of size $\Theta(\sqrt{n})$ but it makes no assumption on the verification keys distribution.
 
-Our main technical tool are two structure preserving --- i.e.~compatible with Groth-Sahai proofs --- hash functions The first funtion, $h$, is \emph{second-preimage resistant} under a slightly different notion of collision. That is, given $A$ in the domain of $h$, is hard to find $A,A'$ such that $h(A')=h(A)$ {\bf whenever $A$ is randomly sampled from some known distribution} and whenever $A'$ is not a permutation of $A$.
-Our function $h$ takes as input $A$, a list of verification keys (in fact, a fragment of each verification key), and returns a constant size digest which is simply $h(A)= \sum_{i=1}^m a_i$. Thereby, whenever $h$ is applied to a set of honestly sampled verification keys, $A$ is indeed random and hence is infeasible to compute a second preimage. 
-
-Our second function $g$ is collision-resistant in the traditional sense an uses $A$ as its key and returns $g_A(x_1,\ldots,x_m) = \sum_{i=1}^m a_ix_i$. Both functions can be used together with the following nice property, given $A,A'$ such that $h(A)=h(A')$, then $g_A(x)=g_{A'}(x')$ implies that $x$ is a permutation of $x'$.
+Our main technical tool are two hash functions compatible with Groth-Sahai proofs. The first funtion, $h$, is \emph{second-preimage resistant} under a slightly different notion of collision. That is, given $A=(a_1,\ldots,\allowbreak a_m)$ in the domain of $h$, is hard to find $A'$ such that $h(A')=h(A)$ whenever $A'$ is not a permutation of $A$.
+Our function $h$ takes as input $A$, a list of verification keys (in fact, a fragment of each verification key), and returns a constant-size digest which is simply $h(A)= \sum_{i=1}^m a_i$.
+Our second function, $g$, is collision-resistant in the traditional sense. It uses $A$ as key and returns $g_A(x_1,\ldots,x_m) = \sum_{i=1}^m a_ix_i$. Whenever {\bf $A$ is sampled from some known distribution}, both functions can be used together with the following nice property, given $A,A'$ such that $h(A)=h(A')$, then $g_A(x)=g_{A'}(x')$ implies that $x$ is a permutation of $x'$. Thereby, whenever $A$ comes from a set of honestly sampled verification keys, $A$ is indeed sampled from the distribution which gathers the aforementioned property. 
 
 \subsubsection{High level description.}
-In our ring signature, the verification key will contain $a,vk$ and $a\cdot vk$, where $vk$ the verification key of a signature scheme. We want to show that some commitment $c$ opens to $vk$ and $vk\in\{vk_1,\ldots,vk_n\}$. To do so, we arrange the $n$ elements of the ring into $n^{2/3}$ blocks of size $m=\sqrt[3]{n}$. We use the following notation: for $\{s_1,\ldots, s_n\}$ define $s_{i,j}:=s_{(i-1)m+j}$, where  $1\leq i \leq n^{2/3},1\leq  j \leq m$. Assume that $vk = vk_{\mu,\nu}$.
+In our ring signature, the verification key will contain $a,vk$ and $a\cdot vk$, where $vk$ is the verification key of a signature scheme. We want to show that some commitment $c$ opens to $vk$ and $vk\in\{vk_1,\ldots,vk_n\}$. To do so, we arrange the $n$ elements of the ring into $n^{2/3}$ blocks of size $m=\sqrt[3]{n}$. We use the following notation: for $\{s_1,\ldots, s_n\}$ define $s_{i,j}:=s_{(i-1)m+j}$, where  $1\leq i \leq n^{2/3},1\leq  j \leq m$. Assume that $vk = vk_{\mu,\nu}$.
 
-We divide $\{a_{1},\ldots, a_{n}\}$ into $A_1 := (a_{1,1},\ldots,a_{1,m}),\ldots, A_{n^{2/3}} := (a_{n^{2/3},1},\ldots,\allowbreak a_{n^{2/3},m})$ and we define $H\allowbreak:=\{h(A_1),\allowbreak\ldots,\allowbreak h(A_{n^{2/3}})\}.$  
+Split $(a_{1},\ldots, a_{n})$ into $A_1 := (a_{1,1},\ldots,a_{1,m}),\ldots, A_{n^{2/3}} := (a_{n^{2/3},1},\ldots,\allowbreak a_{n^{2/3},m})$ and define $H\allowbreak:=\{h(A_1),\allowbreak\ldots,\allowbreak h(A_{n^{2/3}})\}.$  
 We use Chandran et al.'s set-membership proof of size $\Theta(\sqrt{n})$ to prove knowledge of some $h(A_\mu)\in H$. Since $|H|=n^{2/3}$, this proof is of size $\Theta(\sqrt[3]{n})$. Then we prove knowledge of $A'$, a preimage of $h(A_\mu)$, which using Groth-Sahai proofs requires commitments to the $\sqrt[3]{n}$ elements in $A'$ plus a $\Theta(1)$ proof that $h(A')=h(A_\mu)$. Hence, this part of the proof adds up to $\Theta(\sqrt[3]{n})$ group elements.
 %Since $h$ is invariant under permutations of the input, we can sort the commitments of the $\sqrt[3]{n}$ elements in $A'$ so that the first commitment is $c$. We conclude that $A'=A_\mu$, unless we break second-preimage resistance of $h$, and thus $a$, the opening of $c$, belongs to $\{a_1,\ldots,a_n\}$.
 
@@ -31,6 +30,6 @@ g_{A_{n^{2/3}}}(
 	vk_{n^{2/3},1},
 	\ldots,
 	vk_{n^{2/3},m})\}$ such that $g$ is also at the $\mu$-th position in the set (this is straightforward to do in Chandran et al.'s set-membership proof).
-We commit to $x_1=vk_{\mu,\nu},\ldots,x_m=vk_{\mu,m}$ and we prove using Groth-Sahai proofs that $g = g_{A'}(x_1,\ldots,x_m)$. Again, this part of the proof adds $\Theta(\sqrt[3]{n})$ group elements.
+We commit to $x_1=vk_{\mu,1},\ldots,x_m=vk_{\mu,m}$ and we prove using Groth-Sahai proofs that $g = g_{A'}(x_1,\ldots,x_m)$. Again, this part of the proof adds $\Theta(\sqrt[3]{n})$ group elements.
 
-Finally, since $h(A')=h(A_\mu)$ and $g_{A'}(x_1,\ldots,x_m) = g = g_{A_{\mu}}(vk_{\mu,1},\ldots,x_{\mu,m})$ we conclude that $x_1,\ldots,x_m$ is a permutation of $vk_{\mu,1},\ldots,vk_{\mu,m}$. It suffices to give a third set membership proof that $c$ opens to some element in $\{x_1,\ldots,x_m\}$ (but we can omit this proof setting $x_1 =vk_{\mu,\nu}$ and a clever use of the ``permutation friendly'' properties of $h$ and $g$).
+Finally, since $h(A')=h(A_\mu)$ and $g_{A'}(x_1,\ldots,x_m) = g = g_{A_{\mu}}(vk_{\mu,1},\ldots,x_{\mu,m})$ we conclude that $x_1,\ldots,x_m$ is a permutation of $vk_{\mu,1},\ldots,vk_{\mu,m}$. It suffices to give a third set-membership proof that $c$ opens to some element in $\{x_1,\ldots,x_m\}$ to conclude that $vk\in R$. (We can omit this set-membership proof setting $x_1 =vk_{\mu,\nu}$ plus a clever usage of the ``permutation friendly'' properties of $h$ and $g$).
