--- a/intro/table-eff.tex
+++ b/intro/table-eff.tex
@@ -20,7 +20,8 @@
 \end{tabular}
 \end{scriptsize}
 \end{center}
-\caption{Comparison of Chandran et al.'s ring signature and ours for a ring of size $n$. `Signature generation' is given in number of exponentiations, `Verification time' is given in number of pairings, and all other rows are given in number of group elements. The last row states if the key generation algorithm erases its random coins after generating the verification and secret keys.
+\caption{Comparison of Chandran et al.'s ring signature and ours for a ring of size $n$. `Signature generation' is given in number of exponentiations, `Verification time' is given in number of pairings, and all other rows are given in number of group elements. The security of the three schemes is proved under the unforgeability of the Boneh-Boyen signature scheme plus the corresponding assumption indicated in the row `Assumption'.
+The last row states if the key generation algorithm erases its random coins after generating the verification and secret keys.
 %A quick calculation shows that our signature outperforms Chandran et al.'s (roughly) for $n>180$.
 \label{table:eff}}
 \end{minipage}
