--- a/main-ring-signature.tex
+++ b/main-ring-signature.tex
@@ -74,7 +74,7 @@
 
 	\input{prelim/prelim}
 
-	\subsection{Hardness Assumptions}
+	\subsection{Hardness Assumptions} \label{sec:hardness-ass}
 
 	\input{prelim/assumptions}
 
